--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -8,5 +8,5 @@
         android:id="@id/gallery_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#b3b3b3"/>
+        android:background="#ffffff"/>
 </FrameLayout>
