--- a/app/src/main/res/layout/gallery_recycler_view_item.xml
+++ b/app/src/main/res/layout/gallery_recycler_view_item.xml
@@ -9,9 +9,11 @@
         android:layout_width="160dp"
         android:layout_height="100dp"
         android:layout_marginBottom="0dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="2dp"
-        android:background="@drawable/image_border"
-        android:scaleType="centerCrop"/>
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:padding="8dp"
+        android:scaleType="centerCrop"
+        android:elevation="4dp"
+        />
 </LinearLayout>
