minor id changes

--- a/app/src/main/res/layout/versus_layout.xml
+++ b/app/src/main/res/layout/versus_layout.xml
@@ -27,7 +27,7 @@
         android:layout_centerHorizontal="true"
         android:layout_margin="8dp"
         android:gravity="center"
-        android:text="VS"/>
+        android:text="@string/versus"/>
 
     <TextView
         android:id="@+id/tv_team2"
