More design tweaks

--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -1,17 +1,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@id/schedule_relative_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.cobeosijek.nkkutjevo.ui.schedule.fragments.ScheduleFragment">
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@id/schedule_relative_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context="com.example.cobeosijek.nkkutjevo.ui.schedule.fragments.ScheduleFragment">
 
     <TextView
         android:id="@id/table_header_team"
-        android:layout_width="100dp"
+        android:layout_width="80dp"
         android:layout_height="20dp"
         android:text="@string/table_header_team_text"
         android:textColor="@color/tableHeaderColor"
-        android:textSize="15sp" />
+        android:textSize="15sp"/>
 
     <TextView
         android:id="@id/table_header_games_played"
@@ -21,7 +21,7 @@
         android:layout_toEndOf="@id/table_header_team"
         android:text="@string/games_played"
         android:textColor="@color/tableHeaderColor"
-        android:textSize="15sp" />
+        android:textSize="15sp"/>
 
     <TextView
         android:id="@id/table_header_won"
@@ -31,7 +31,7 @@
         android:layout_toEndOf="@id/table_header_games_played"
         android:text="@string/won"
         android:textColor="@color/tableHeaderColor"
-        android:textSize="15sp" />
+        android:textSize="15sp"/>
 
     <TextView
         android:id="@id/table_header_lost"
@@ -41,7 +41,7 @@
         android:layout_toEndOf="@id/table_header_won"
         android:text="@string/games_lost"
         android:textColor="@color/tableHeaderColor"
-        android:textSize="15sp" />
+        android:textSize="15sp"/>
 
     <TextView
         android:id="@id/table_header_draw"
@@ -51,7 +51,7 @@
         android:layout_toEndOf="@id/table_header_lost"
         android:text="@string/games_draw"
         android:textColor="@color/tableHeaderColor"
-        android:textSize="15sp" />
+        android:textSize="15sp"/>
 
     <TextView
         android:id="@id/table_header_goals_for"
@@ -61,7 +61,7 @@
         android:layout_toEndOf="@id/table_header_draw"
         android:text="@string/goals_for"
         android:textColor="@color/tableHeaderColor"
-        android:textSize="15sp" />
+        android:textSize="15sp"/>
 
     <TextView
         android:id="@id/table_header_goals_against"
@@ -69,9 +69,9 @@
         android:layout_height="20dp"
         android:layout_marginStart="20dp"
         android:layout_toEndOf="@id/table_header_goals_for"
-        android:text="@string/goals_for"
+        android:text="@string/goals_against"
         android:textColor="@color/tableHeaderColor"
-        android:textSize="15sp" />
+        android:textSize="15sp"/>
 
     <TextView
         android:id="@id/table_header_goal_difference"
@@ -81,14 +81,14 @@
         android:layout_toEndOf="@id/table_header_goals_against"
         android:text="@string/goal_difference"
         android:textColor="@color/tableHeaderColor"
-        android:textSize="15sp" />
+        android:textSize="15sp"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@id/ranking_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_below="@id/table_header_team"
-        android:background="@color/rankingsTableColor" />
+        android:background="@color/rankingsTableColor"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@id/games_recycler"
