--- a/app/src/main/res/layout-v21/fragment_home.xml
+++ b/app/src/main/res/layout-v21/fragment_home.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/tableHeaderColor"
+        android:backgroundTint="@color/cardview_shadow_end_color"
         android:text="@string/our_latest_news"
         android:textAlignment="center"
         android:textColor="@color/white"
